--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <nav>
-            <h1>Hi, I am Aditya Agarwal</h1>
+            <h1>Software Developer</h1>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -22,11 +22,7 @@
 
   
     <section id="hero">
-        <h2>So What Am I</h2>
-        <p>
-            Backend-focused developer specializing in Java, Spring Boot, 
-            REST APIs, and scalable microservices.
-        </p>
+        <h2>Hi, I am Aditya Agarwal and Welcome to my Portfolio.</h2>
         
     </section>
 
