--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <nav>
-            <h1>Software Developer</h1>
+            <h1>Build. Optimize. Scale.</h1>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -154,3 +154,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
